Improve profile error messages and file ops
Enhance profile handling to provide clearer error messages when a profile is not found, including suggestions for similar profiles. Replace boolean flags with a `ProfileDecision` enum for improved readability and consistency in profile import and export operations. Ensure robust file existence checks during all profile-related file manipulations.